cargo-features = ["named-profiles"]

[workspace]
members = [
    "crypto",
    "tezos-encoding",
    "tezos-encoding-derive",
]

[workspace.dependencies.tezos_data_encoding]
version = "0.5.2"
path = "./tezos-encoding"
default-features = false

[workspace.dependencies.tezos_data_encoding_derive]
version = "0.5.2"
path = "./tezos-encoding-derive"
default-features = false

[workspace.dependencies.tezos_crypto_rs]
version = "0.5.2"
path = "./crypto"
default-features = false

[workspace.dependencies.nom]
nom = "7.1"

[profile.fuzz]
inherits = "release"
opt-level = 3
debug = 2
debug-assertions = true  # TODO: test and disable if too slow
overflow-checks = true
lto = false
panic = "abort"
incremental = false
codegen-units = 1
