cargo-features = ["named-profiles"]

[workspace]
resolver = "2"
members = [
    "crypto",
    "tezos-encoding",
    "tezos-encoding-derive",
]

[profile.fuzz]
inherits = "release"
opt-level = 3
debug = 2
debug-assertions = true  # TODO: test and disable if too slow
overflow-checks = true
lto = false
panic = "abort"
incremental = false
codegen-units = 1
