[package]
name = "crypto"
version = "2.3.3"
authors = ["Tomas Sedlak <tomas.sedlak@simplestaking.com>"]
edition = "2021"
rust-version = "1.58"

[dependencies]
anyhow = "1.0"
base58 = "0.1.0"
byteorder = "1.4.3"
cryptoxide = { version = "0.4.2", optional = true }
hex = "0.4"
libsecp256k1 = { version = "0.7", default-features = false, features = ["static-context"] }
num-bigint = { version = "0.3", features = ["serde"]}
num-traits = "0.2.8"
p256 = { version = "0.9", default-features = false, features = ["ecdsa"] }
rand = { version = "0.7.3", optional = true }
sodiumoxide = { version = "=0.2.6", optional = true }
serde = { version = "1.0", features = ["derive"] }
strum = "0.20"
strum_macros = "0.20"
thiserror = "1.0"
zeroize = { version = "1.5" }

fuzzcheck = { git = "https://github.com/tezedge/fuzzcheck-rs.git", optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["std"]
std = ["num-bigint/rand", "rand", "sodiumoxide", "libsecp256k1/std", "p256/std"]
fuzzing = ["fuzzcheck"]
no_sodium = ["cryptoxide"]