[package]
name = "tezos_data_encoding"
version = "4.0.1"
authors = ["TriliTech <contact@trili.tech>"]
edition = "2021"
rust-version = "1.60"
license = "MIT"
keywords = ["tezos"]
categories = ["encoding"]
description = "Utilities for encoding/decoding data compatible with tezos data encoding."
repository = "https://github.com/trilitech/tezedge.git"

[dependencies]
bit-vec = "0.6.2"
thiserror = "1.0"
hex = "0.4"
num-bigint = "0.3"
num-traits = "0.2.8"
serde = { version = "1.0", features = ["derive"] }
nom = "6.1"
lazy_static = "1.4"
# local dependencies
tezos_crypto = { path = "../crypto", default-features = false }
tezos_data_encoding_derive = { path = "../tezos-encoding-derive" }

[features]

[dev-dependencies]
serde_json = "1.0"
